--- a/luvano.html
+++ b/luvano.html
@@ -11,6 +11,7 @@
         <div class="estrutura" id="estrutura1">
             <div id="logo-section">
                 <a href="luvano.html"><img src="img/luvanocolonial_logo.png" alt=""></a>
+                <h2>Há 35 anos, a sua melhor escolha.</h2>
             </div>
             <div id="nav-section">
                 <nav>
