--- a/luvano.html
+++ b/luvano.html
@@ -34,10 +34,27 @@
         </div>
     </section>
     <section class="background" id="background2">
-        <div class="estrutura"></div>
+        <div class="estrutura" id="estrutura 2">
+        <!-- Essa Div é apenas uma divisória em laranja no site. Não há conteúdo -->
+        </div>
     </section>
     <section class="background" id="background3">
-        <div class="estrutura"></div>
+        <div class="estrutura" id="estrutura3">
+            <div id="tec-inovacao">
+                <div class="titulos">
+                    <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Tecnologia e Inovação</h3>
+                </div>
+                <p>
+                    Os produtos fabricados pela <strong>Luvano Colonial</strong> são destinados à indústria, ao uso hospitalar, pavimentação de ruas e áreas externas, moinhos, uso em tubulação em geral.
+                    <br>
+                    <br>
+                    Dispomos de uma grande linha de cerdas especiais que se adaptam às necessidades específicas de nossos clientes, Compreendem cerdas de crina animal, fibra de coco, sisal, piaçava, pita mexicana, nylon puro e pena de ganso, entre outras. 
+                </p>
+            </div>
+            <div id="tec-inovacao-img">
+                <img src="img/luvano_fibras.png" alt="">
+            </div>
+        </div>
     </section>
     <section class="background" id="background4">
         <div class="estrutura"></div>
