--- a/luvano.html
+++ b/luvano.html
@@ -44,7 +44,7 @@
                 <div class="titulos">
                     <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Tecnologia e Inovação</h3>
                 </div>
-                <p>
+                <p class="txt-padrao">
                     Os produtos fabricados pela <strong>Luvano Colonial</strong> são destinados à indústria, ao uso hospitalar, pavimentação de ruas e áreas externas, moinhos, uso em tubulação em geral.
                     <br>
                     <br>
@@ -57,7 +57,24 @@
         </div>
     </section>
     <section class="background" id="background4">
-        <div class="estrutura"></div>
+        <div class="estrutura" id="estrutura4">
+            <div class="prods" id="prod1">
+                <h4>Linha Industrial</h4>
+                <img class="prods-img" src="img/luvanoicon1.png" alt="">
+            </div>
+            <div class="prods" id="prod2">
+                <h4>Linha Doméstica</h4>
+                <img class="prods-img" src="img/luvanoicon2.png" alt="">
+            </div>
+            <div class="prods" id="prod3">
+                <h4>Recondicionamento</h4>
+                <img class="prods-img" src="img/luvanoicon3.png" alt="">
+            </div>
+            <div class="prods" id="prod4">
+                <h4>Projetos Especiais</h4>
+                <img class="prods-img" src="img/luvanoicon4.png" alt="">
+            </div>
+        </div>
     </section>
     <section class="background" id="background5">
         <div class="estrutura"></div>
