--- a/index.html
+++ b/index.html
@@ -77,7 +77,29 @@
         </div>
     </section>
     <section class="background" id="background5">
-        <div class="estrutura"></div>
+        <div class="estrutura" id="estrutura5">
+            <div class="titulos">
+                <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Sustentabilidade e Processo Produtivo</h3>
+            </div>
+            <div id="sust-process">
+                <img src="img/luvano_sust.png" alt="">
+                <p class="txt-padrao">
+                    A sustentabilidade tem uma importância muito
+                    grande para a LUVANO COLONIAL. As fibras naturais
+                    são cultivadas em sistemas que respeitam o meio
+                    ambiente, diminuindo o impacto ambiental e
+                    promovendo uma economia circular.
+                    Outro aspecto fundamental é a reciclagem de fibras
+                    sintéticas, proveniente de resíduos plásticos, o que
+                    reduz o volume de lixo nos aterros e a dependência
+                    de matérias-primas virgens. A otimização dos
+                    recursos, como água e energia elétrica e o
+                    investimento em novas tecnologias também são
+                    essenciais para tornar o nosso processo produtivo
+                    mais eficiente.
+                </p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
