--- a/index.html
+++ b/index.html
@@ -101,5 +101,23 @@
             </div>
         </div>
     </section>
+    <section class="background" id="background6">
+        <div class="estrutura" id="estrutura6">
+            <div id="recondicionamento">
+                <div id="recon-titulo">
+                    <div class="titulos" id="tit-back6">
+                        <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Recondicionamento</h3>
+                    </div>
+                    <p>
+                        Além da fabricação de materiais de alta qualidade,
+                        recondicionamos vassouras e escovas industriais dos mais
+                        variados tipos, inclusive as produzidas por outros
+                        fabricantes nacionais ou internacionais.
+                    </p>
+                </div>
+                <img id="fibras" src="img/fibras.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
