--- a/index.html
+++ b/index.html
@@ -119,5 +119,10 @@
             </div>
         </div>
     </section>
+    <section class="background" id="background7">
+        <div class="estrutura" id="estrutura7">
+            
+        </div>
+    </section>
 </body>
 </html>
