--- a/index.html
+++ b/index.html
@@ -121,7 +121,48 @@
     </section>
     <section class="background" id="background7">
         <div class="estrutura" id="estrutura7">
-            
+            <div id="contato">
+                <div id="aba-redes-sociais">
+                    <div class="titulos" id="tit-back7">
+                        <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Fale Conosco</h3>
+                    </div>
+                    <span class="listing-fale-conosco">
+                        <img src="img/instagram-grey.png" alt="">
+                        <h6>(51) 3473.0929</h6>
+                    </span>
+                    <span class="listing-fale-conosco">
+                        <img src="img/instagram-grey.png" alt="">
+                        <h6>(51) 3473.0929</h6>
+                    </span>
+                    <span class="listing-fale-conosco">
+                        <img src="img/instagram-grey.png" alt="">
+                        <h6>(51) 3473.0929</h6>
+                    </span>
+                    <span class="listing-fale-conosco">
+                        <img src="img/instagram-grey.png" alt="">
+                        <h6>(51) 3473.0929</h6>
+                    </span>
+                </div>
+                <div id="aba-formulario">
+                    <form id="form-email" action="submit_form.php" method="post">
+                        <input type="email" class="campo-form" id="email" name="email" placeholder="seuemail@exemplo.com" required>
+                        <input type="name" class="campo-form" id="name" name="name" placeholder="Nome completo" required>
+                        <input type="tel" class="campo-form" id="tel" name="tel" placeholder="Telefone contato" required>
+                        <input type="text" class="campo-form" id="text" name="text" placeholder="Mensagem..." required>
+                        <input id="btn-envia" type="submit" value="Enviar">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="background" id="background2">
+        <div class="estrutura" id="estrutura 2">
+        <!-- Essa Div é apenas uma divisória em laranja no site. Não há conteúdo -->
+        </div>
+    </section>
+    <section class="background" id="background8">
+        <div class="estrutura" id="estrutura 8">
+        
         </div>
     </section>
 </body>
