--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <input type="email" class="campo-form" id="email" name="email" placeholder="seuemail@exemplo.com" required>
                         <input type="name" class="campo-form" id="name" name="name" placeholder="Nome completo" required>
                         <input type="tel" class="campo-form" id="tel" name="tel" placeholder="Telefone contato" required>
-                        <input type="text" class="campo-form" id="text" name="text" placeholder="Mensagem..." required>
+                        <textarea class="campo-form" id="text" name="text" rows="4" cols="50" placeholder="Mensagem..."></textarea required>
                         <input id="btn-envia" type="submit" value="Enviar">
                     </form>
                 </div>
