teste formulário contato

--- a/index.html
+++ b/index.html
@@ -127,20 +127,34 @@
                         <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Fale Conosco</h3>
                     </div>
                     <span class="listing-fale-conosco">
-                        <img src="img/instagram-grey.png" alt="">
-                        <h6>(51) 3473.0929</h6>
+                        <a class="a-contato" href="#">
+                            <img src="img/chamada-telefonica.png" alt="">
+                            <h6>(51) 3473.0929</h6>
+                        </a>
                     </span>
                     <span class="listing-fale-conosco">
-                        <img src="img/instagram-grey.png" alt="">
-                        <h6>(51) 3473.0929</h6>
+                        <a class="a-contato" href="#">
+                            <img src="img/whatsapp-grey.png" alt="">
+                            <h6>(51) 99285.0853</h6>
+                        </a>
                     </span>
                     <span class="listing-fale-conosco">
-                        <img src="img/instagram-grey.png" alt="">
-                        <h6>(51) 3473.0929</h6>
+                        <a class="a-contato" href="#">
+                            <img src="img/instagram-grey.png" alt="">
+                            <h6>@luvanoescovas</h6>
+                        </a>
                     </span>
                     <span class="listing-fale-conosco">
-                        <img src="img/instagram-grey.png" alt="">
-                        <h6>(51) 3473.0929</h6>
+                        <a class="a-contato" href="#">
+                            <img src="img/facebook-grey.png" alt="">
+                            <h6>Luvano</h6>
+                        </a>
+                    </span>
+                    <span class="listing-fale-conosco">
+                        <a class="a-contato" href="#">
+                            <img src="img/marcador.png" alt="">
+                            <h6>Rua da Legalidade, 124 - 93265-190 - Esteio - RS</h6>
+                        </a>
                     </span>
                 </div>
                 <div id="aba-formulario">
