--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img src="img/luvano_sust.png" alt="">
                 <p class="txt-padrao">
                     A sustentabilidade tem uma importância muito
-                    grande para a LUVANO COLONIAL. As fibras naturais
+                    grande para a <strong>LUVANO COLONIAL</strong>. As fibras naturais
                     são cultivadas em sistemas que respeitam o meio
                     ambiente, diminuindo o impacto ambiental e
                     promovendo uma economia circular.
