--- a/index.html
+++ b/index.html
@@ -169,15 +169,41 @@
             </div>
         </div>
     </section>
-    <section class="background" id="background2">
-        <div class="estrutura" id="estrutura 2">
+    <section class="background" id="background2" style="margin-top: 100px;">
+        <div class="estrutura" id="estrutura2">
         <!-- Essa Div é apenas uma divisória em laranja no site. Não há conteúdo -->
         </div>
     </section>
     <section class="background" id="background8">
-        <div class="estrutura" id="estrutura 8">
-        
+        <div class="estrutura" id="estrutura8">
+            <footer>
+                <div id="footer-logo-rs">
+                    <img id="logo-footer" src="img/luvanocolonial_logo.png" alt="">
+                    <span id="footer-redes-sociais">
+                        <a href="#"><img src="img/instagram.png" alt=""></a>
+                        <a href="#"><img src="img/linkedin.png" alt=""></a>
+                        <a href="#"><img src="img/whatsapp.png" alt=""></a>
+                    </span>
+                </div>
+                <div>
+                    <ul id="footer-nav">
+                        <li><a id="a-footer" href="luvano.html">Home</a></li>
+                        <li><a id="a-footer" href="#">Empresa</a></li>
+                        <li><a id="a-footer" href="#">Produtos</a></li>
+                        <li><a id="a-footer" href="#">Localização</a></li>
+                        <li><a id="a-footer" href="#">Contato</a></li>
+                    </ul>
+                </div> 
+                <div id="footer-iframe">
+                    <h3>Localização</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3460.2581570769744!2d-51.1664229!3d-29.8568279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95196f70df84e87b%3A0x652dddb9b35359d4!2sR.%20da%20Legalidade%2C%20124%20-%20Liberdade%2C%20Esteio%20-%20RS%2C%2093265-390!5e0!3m2!1spt-BR!2sbr!4v1728760852755!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+            </footer>
         </div>
     </section>
+    <div class="registro">
+        <div class="logo-bortoac">Desenvolvido por Bortoac<a class="bortoac-a" href="https://bortoac.com.br/" target="_blank"><img class="bortoac-logo" src="Img/bortoac_logo3.png" alt=""></div>
+    </div>
 </body>
 </html>
