--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <nav>
                     <ul>
                         <li><a class="li-branco" href="luvano.html">Home</a></li>
-                        <li><a class="li-laranja" href="#">Empresa</a></li>
+                        <li><a class="li-laranja" href="nossa-historia.html">Empresa</a></li>
                         <li><a class="li-branco" href="#">Produtos</a></li>
                         <li><a class="li-laranja" href="#">Localização</a></li>
                         <li><a class="li-branco" href="#">Contato</a></li>
