--- a/nossa-historia.html
+++ b/nossa-historia.html
@@ -105,8 +105,8 @@
                 <div>
                     <ul id="footer-nav">
                         <li><a id="a-footer" href="luvano.html">Home</a></li>
-                        <li><a id="a-footer" href="#">Empresa</a></li>
-                        <li><a id="a-footer" href="#">Produtos</a></li>
+                        <li><a id="a-footer" href="nossa-historia.html">Empresa</a></li>
+                        <li><a id="a-footer" href="produtos.html">Produtos</a></li>
                         <li><a id="a-footer" href="#">Localização</a></li>
                         <li><a id="a-footer" href="#">Contato</a></li>
                     </ul>
