--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li><a class="li-branco" href="luvano.html">Home</a></li>
                         <li><a class="li-laranja" href="nossa-historia.html">Empresa</a></li>
-                        <li><a class="li-branco" href="#">Produtos</a></li>
+                        <li><a class="li-branco" href="produtos.html">Produtos</a></li>
                         <li><a class="li-laranja" href="#">Localização</a></li>
                         <li><a class="li-branco" href="#">Contato</a></li>
                     </ul>
@@ -188,8 +188,8 @@
                 <div>
                     <ul id="footer-nav">
                         <li><a id="a-footer" href="luvano.html">Home</a></li>
-                        <li><a id="a-footer" href="#">Empresa</a></li>
-                        <li><a id="a-footer" href="#">Produtos</a></li>
+                        <li><a id="a-footer" href="nossa-historia.html">Empresa</a></li>
+                        <li><a id="a-footer" href="produtos.html">Produtos</a></li>
                         <li><a id="a-footer" href="#">Localização</a></li>
                         <li><a id="a-footer" href="#">Contato</a></li>
                     </ul>
