--- a/produtos.html
+++ b/produtos.html
@@ -114,7 +114,7 @@
                 </div>
                 <div>
                     <ul id="footer-nav">
-                        <li><a id="a-footer" href="luvano.html">Home</a></li>
+                        <li><a id="a-footer" href="index.html">Home</a></li>
                         <li><a id="a-footer" href="nossa-historia.html">Empresa</a></li>
                         <li><a id="a-footer" href="produtos.html">Produtos</a></li>
                         <li><a id="a-footer" href="#">Localização</a></li>
