--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="nav-section">
                 <nav>
                     <ul>
-                        <li><a class="li-branco" href="luvano.html">Home</a></li>
+                        <li><a class="li-branco" href="index.html">Home</a></li>
                         <li><a class="li-laranja" href="nossa-historia.html">Empresa</a></li>
                         <li><a class="li-branco" href="produtos.html">Produtos</a></li>
                         <li><a class="li-laranja" href="#">Localização</a></li>
@@ -187,7 +187,7 @@
                 </div>
                 <div>
                     <ul id="footer-nav">
-                        <li><a id="a-footer" href="luvano.html">Home</a></li>
+                        <li><a id="a-footer" href="index.html">Home</a></li>
                         <li><a id="a-footer" href="nossa-historia.html">Empresa</a></li>
                         <li><a id="a-footer" href="produtos.html">Produtos</a></li>
                         <li><a id="a-footer" href="#">Localização</a></li>
