--- a/produtos.html
+++ b/produtos.html
@@ -82,7 +82,7 @@
     <section class="background" id="background3-produtos">
         <div class="estrutura" id="estrutura3-produtos">
             <img style="width: 500px; align-self: center; margin-bottom: 20px;" src="img/luv_tit_prod_04.png" alt="">
-            <div>
+            <div style="display: flex; gap: 40px; align-items: center;">
                 <p class="txt-padrao">
                     As escovas especiais desempenham um papel
                     fundamental em diversos setores da indústria, oferecendo
@@ -92,7 +92,13 @@
                     necessidades específicas de cada setor para garantir
                     eficiência, durabilidade e desempenho.
                 </p>
-                <img src="img/" alt="">
+                <img style="width: 400px;" src="img/luvano_especiais.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="background" id="background4-produtos">
+        <div class="estrutura" id="estrutura4-produtos">
+            
             </div>
         </div>
     </section>
