--- a/produtos.html
+++ b/produtos.html
@@ -98,7 +98,31 @@
     </section>
     <section class="background" id="background4-produtos">
         <div class="estrutura" id="estrutura4-produtos">
-            
+            <div class="titulos">
+                <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Linhda Doméstica</h3>
+            </div>
+            <p class="txt-padrao" style="margin-top: 20px;">
+                As escovas, vassouras e outros utensílios de limpeza são essenciais tanto para residências
+                quanto para empresas, garantindo a higienização e o cuidado adequado dos ambientes.
+                Esses itens são projetados para atender às necessidades de diferentes tipos de superfícies e
+                sujidades, proporcionando eficiência na remoção de poeira, resíduos e sujeiras acumuladas.
+            </p>
+        </div>
+    </section>
+    <section class="background" id="background5-produtos">
+        <div class="estrutura" id="estrutura5-produtos">
+            <img id="img-projetos-especiais" src="img/luvano_project.png" alt="">
+            <div id="projetos-especiais">
+                <div class="titulos">
+                    <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Proejtos Especiais</h3>
+                </div>
+                <p class="txt-padrao" style="margin-top: 20px;">
+                    A <strong>LUVANO COLONIAL</strong> produz sob medida, qualquer
+                    produto de sua necessidade a partir de um projeto,
+                    desenho, croqui ou amostra.
+                    Encaminhe suas demandas ao nosso setor de
+                    projetos através de nosso contato ou redes sociais.
+                </p>
             </div>
         </div>
     </section>
