--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="luvano.css">
+    <link rel="stylesheet" href="luvano-responsivo.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Luvano Colonial</title>
 </head>
@@ -11,7 +12,9 @@
     <section class="background" id="background1">
         <div class="estrutura" id="estrutura1">
             <div id="logo-section">
-                <a href="luvano.html"><img src="img/luvanocolonial_logo.png" alt=""></a>
+                <a href="luvano.html">
+                    <img id="logo" src="img/luvanocolonial_logo.png" alt="">
+                </a>
                 <h2>Há 35 anos, a sua melhor escolha.</h2>
             </div>
             <div id="nav-section">
@@ -25,7 +28,7 @@
                     </ul>
                 </nav>
                 <div id="banner-h2">
-                    <h2>Linha Indústrial</h2>
+                    <h2>Linha Industrial</h2>
                     <h2>Linha Doméstica</h2>
                     <h2>Recondicionamento</h2>
                     <h2>Projetos Especiais</h2>
@@ -53,6 +56,22 @@
             </div>
             <div id="tec-inovacao-img">
                 <img src="img/luvano_fibras.png" alt="">
+            </div>
+        </div>
+        <div class="estrutura" id="estrutura3-escondida">
+            <div id="tec-inovacao">
+                <div class="titulos">
+                    <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Tecnologia e Inovação</h3>
+                </div>
+                <p class="txt-padrao">
+                    Os produtos fabricados pela <strong>Luvano Colonial</strong> são destinados à indústria, ao uso hospitalar, pavimentação de ruas e áreas externas, moinhos, uso em tubulação em geral.
+                </p>
+                <div id="tec-inovacao-img">
+                    <img src="img/luvano_fibras.png" alt="">
+                </div>
+                <p class="txt-padrao">
+                    Dispomos de uma grande linha de cerdas especiais que se adaptam às necessidades específicas de nossos clientes, Compreendem cerdas de crina animal, fibra de coco, sisal, piaçava, pita mexicana, nylon puro e pena de ganso, entre outras. 
+                </p>
             </div>
         </div>
     </section>
