--- a/produtos.html
+++ b/produtos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="luvano.css">
     <link rel="stylesheet" href="produtos.css">
+    <link rel="stylesheet" href="luvano-responsivo.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Luvano Colonial</title>
 </head>
