--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         <div class="estrutura" id="estrutura6">
             <div id="recondicionamento">
                 <div id="recon-titulo">
-                    <div class="titulos" id="tit-back6">
-                        <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Recondicionamento</h3>
+                    <div class="titulos">
+                        <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3 id="tit-back6">Recondicionamento</h3>
                     </div>
                     <p>
                         Além da fabricação de materiais de alta qualidade,
