--- a/produtos.html
+++ b/produtos.html
@@ -10,6 +10,33 @@
     <title>Luvano Colonial</title>
 </head>
 <body>
+    <section class="background" id="background1">
+        <div class="estrutura" id="estrutura1">
+            <div id="logo-section">
+                <a href="luvano.html">
+                    <img id="logo" src="img/luvanocolonial_logo.png" alt="">
+                </a>
+                <h2>Há 35 anos, a sua melhor escolha.</h2>
+            </div>
+            <div id="nav-section">
+                <nav>
+                    <ul>
+                        <li><a class="li-branco" href="index.html">Home</a></li>
+                        <li><a class="li-laranja" href="nossa-historia.html">Empresa</a></li>
+                        <li><a class="li-branco" href="produtos.html">Produtos</a></li>
+                        <li><a class="li-laranja" href="#">Localização</a></li>
+                        <li><a class="li-branco" href="#">Contato</a></li>
+                    </ul>
+                </nav>
+                <div id="banner-h2">
+                    <h2>Linha Industrial</h2>
+                    <h2>Linha Doméstica</h2>
+                    <h2>Recondicionamento</h2>
+                    <h2>Projetos Especiais</h2>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="background" id="background2">
         <div class="estrutura" id="estrutura 2">
         <!-- Essa Div é apenas uma divisória em laranja no site. Não há conteúdo -->
@@ -82,8 +109,8 @@
     </section>
     <section class="background" id="background3-produtos">
         <div class="estrutura" id="estrutura3-produtos">
-            <img style="width: 500px; align-self: center; margin-bottom: 20px;" src="img/luv_tit_prod_04.png" alt="">
-            <div style="display: flex; gap: 40px; align-items: center;">
+            <img id="tit-especiais" src="img/luv_tit_prod_04.png" alt="">
+            <div id="especiais" style="display: flex; gap: 40px; align-items: center;">
                 <p class="txt-padrao">
                     As escovas especiais desempenham um papel
                     fundamental em diversos setores da indústria, oferecendo
@@ -93,7 +120,7 @@
                     necessidades específicas de cada setor para garantir
                     eficiência, durabilidade e desempenho.
                 </p>
-                <img style="width: 400px;" src="img/luvano_especiais.png" alt="">
+                <img id="img-especiais" src="img/luvano_especiais.png" alt="">
             </div>
         </div>
     </section>
