--- a/nossa-historia.html
+++ b/nossa-historia.html
@@ -10,6 +10,33 @@
     <title>Luvano Colonial</title>
 </head>
 <body>
+    <section class="background" id="background1">
+        <div class="estrutura" id="estrutura1">
+            <div id="logo-section">
+                <a href="luvano.html">
+                    <img id="logo" src="img/luvanocolonial_logo.png" alt="">
+                </a>
+                <h2>Há 35 anos, a sua melhor escolha.</h2>
+            </div>
+            <div id="nav-section">
+                <nav>
+                    <ul>
+                        <li><a class="li-branco" href="index.html">Home</a></li>
+                        <li><a class="li-laranja" href="nossa-historia.html">Empresa</a></li>
+                        <li><a class="li-branco" href="produtos.html">Produtos</a></li>
+                        <li><a class="li-laranja" href="#">Localização</a></li>
+                        <li><a class="li-branco" href="#">Contato</a></li>
+                    </ul>
+                </nav>
+                <div id="banner-h2">
+                    <h2>Linha Industrial</h2>
+                    <h2>Linha Doméstica</h2>
+                    <h2>Recondicionamento</h2>
+                    <h2>Projetos Especiais</h2>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="background" id="background2">
         <div class="estrutura" id="estrutura 2">
         <!-- Essa Div é apenas uma divisória em laranja no site. Não há conteúdo -->
