--- a/nossa-historia.html
+++ b/nossa-historia.html
@@ -24,8 +24,8 @@
                         <li><a class="li-branco" href="index.html">Home</a></li>
                         <li><a class="li-laranja" href="nossa-historia.html">Empresa</a></li>
                         <li><a class="li-branco" href="produtos.html">Produtos</a></li>
-                        <li><a class="li-laranja" href="#">Localização</a></li>
-                        <li><a class="li-branco" href="#">Contato</a></li>
+                        <li><a class="li-laranja" href="#localizacao">Localização</a></li>
+                        <li><a class="li-branco" href="#localizacao">Contato</a></li>
                     </ul>
                 </nav>
                 <div id="banner-h2">
@@ -94,10 +94,8 @@
                 <img class="itens-img" src="img/luv_icon2.png" alt="">
                 <div class="missao-visao-metas">
                     <h3 class="mvm-h3">Visão</h3>
-                    <p class="mvm-p"> Oferecer produtos e serviços da mais alta qualidade, com valor justo, a todo o setor
-                        que demande, colaborando para que os clientes sejam líderes em seus próprios
-                        setores e, conseqüentemente, fazendo com que alcancemos também uma maior
-                        projeção.
+                    <p class="mvm-p"> Ser a melhor empresa de nosso ramo, garantindo qualidade e satisfação aos
+                        nossos clientes, preservando o meio ambiente e valorizando a vida humana.
                     </p>
                 </div>
             </div>
@@ -105,10 +103,17 @@
                 <img class="itens-img" src="img/luv_icon3.png" alt="">
                 <div class="missao-visao-metas">
                     <h3 class="mvm-h3">Metas</h3>
-                    <p class="mvm-p"> Oferecer produtos e serviços da mais alta qualidade, com valor justo, a todo o setor
-                        que demande, colaborando para que os clientes sejam líderes em seus próprios
-                        setores e, conseqüentemente, fazendo com que alcancemos também uma maior
-                        projeção.
+                    <p class="mvm-p"> Seguir crescendo através do desenvolvimento de produtos de grande excelência e
+                        que perdurem ao longo do tempo, procurando superar as expectativas de nossos
+                        clientes. <br> <br>
+                        
+                        Manter-nos sempre prontos para enfrentar os desafios, para buscar novos
+                        aprendizados e receber os reconhecimentos por nosso trabalho com alegria e
+                        humildade. <br> <br>
+                        
+                        Expandir nosso atendimento de maneira gradual e consciente conquistando espaço
+                        no mercado através da confiança de nossos clientes em nosso produto, nossos
+                        prazos e nossos valores.
                     </p>
                 </div>
             </div>
@@ -127,7 +132,7 @@
                     <span id="footer-redes-sociais">
                         <a href="#"><img src="img/instagram.png" alt=""></a>
                         <a href="#"><img src="img/linkedin.png" alt=""></a>
-                        <a href="#"><img src="img/whatsapp.png" alt=""></a>
+                        <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..."><img src="img/whatsapp.png" alt=""></a>
                     </span>
                 </div>
                 <div>
@@ -135,8 +140,8 @@
                         <li><a id="a-footer" href="index.html">Home</a></li>
                         <li><a id="a-footer" href="nossa-historia.html">Empresa</a></li>
                         <li><a id="a-footer" href="produtos.html">Produtos</a></li>
-                        <li><a id="a-footer" href="#">Localização</a></li>
-                        <li><a id="a-footer" href="#">Contato</a></li>
+                        <li><a id="a-footer" href="#localizacao">Localização</a></li>
+                        <li><a id="a-footer" href="#localizacao">Contato</a></li>
                     </ul>
                 </div> 
                 <div id="footer-iframe">
@@ -148,7 +153,7 @@
         </div>
     </section>
     <div class="registro">
-        <div class="logo-bortoac">Desenvolvido por Bortoac<a class="bortoac-a" href="https://bortoac.com.br/" target="_blank"><img class="bortoac-logo" src="Img/bortoac_logo3.png" alt=""></div>
+        <div class="logo-bortoac">Desenvolvido por Bortoac<a class="bortoac-a" href="https://bortoac.com.br/" target="_blank"><img class="bortoac-logo" src="img/bortoac_logo3.png" alt=""></div>
     </div>
 </body>
 </html>
