--- a/produtos.html
+++ b/produtos.html
@@ -24,8 +24,8 @@
                         <li><a class="li-branco" href="index.html">Home</a></li>
                         <li><a class="li-laranja" href="nossa-historia.html">Empresa</a></li>
                         <li><a class="li-branco" href="produtos.html">Produtos</a></li>
-                        <li><a class="li-laranja" href="#">Localização</a></li>
-                        <li><a class="li-branco" href="#">Contato</a></li>
+                        <li><a class="li-laranja" href="#localizacao">Localização</a></li>
+                        <li><a class="li-branco" href="#localizacao">Contato</a></li>
                     </ul>
                 </nav>
                 <div id="banner-h2">
@@ -135,6 +135,7 @@
                 Esses itens são projetados para atender às necessidades de diferentes tipos de superfícies e
                 sujidades, proporcionando eficiência na remoção de poeira, resíduos e sujeiras acumuladas.
             </p>
+            <img style="width: 200px; margin-top: 50px;" src="img/fnd.png" alt="">
         </div>
     </section>
     <section class="background" id="background5-produtos">
@@ -167,7 +168,7 @@
                     <span id="footer-redes-sociais">
                         <a href="#"><img src="img/instagram.png" alt=""></a>
                         <a href="#"><img src="img/linkedin.png" alt=""></a>
-                        <a href="#"><img src="img/whatsapp.png" alt=""></a>
+                        <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..."><img src="img/whatsapp.png" alt=""></a>
                     </span>
                 </div>
                 <div>
@@ -175,8 +176,8 @@
                         <li><a id="a-footer" href="index.html">Home</a></li>
                         <li><a id="a-footer" href="nossa-historia.html">Empresa</a></li>
                         <li><a id="a-footer" href="produtos.html">Produtos</a></li>
-                        <li><a id="a-footer" href="#">Localização</a></li>
-                        <li><a id="a-footer" href="#">Contato</a></li>
+                        <li><a id="a-footer" href="#localizacao">Localização</a></li>
+                        <li><a id="a-footer" href="#localizacao">Contato</a></li>
                     </ul>
                 </div> 
                 <div id="footer-iframe">
@@ -188,7 +189,7 @@
         </div>
     </section>
     <div class="registro">
-        <div class="logo-bortoac">Desenvolvido por Bortoac<a class="bortoac-a" href="https://bortoac.com.br/" target="_blank"><img class="bortoac-logo" src="Img/bortoac_logo3.png" alt=""></div>
+        <div class="logo-bortoac">Desenvolvido por Bortoac<a class="bortoac-a" href="https://bortoac.com.br/" target="_blank"><img class="bortoac-logo" src="img/bortoac_logo3.png" alt=""></div>
     </div>
 </body>
 </html>
